--- a/html/sos/patterns/12-site-favicon.html
+++ b/html/sos/patterns/12-site-favicon.html
@@ -6,13 +6,21 @@
 <!-- Embed example in Style Guide -->
 
 <p class="guidance">
-  This is just a placeholder STP 16x16 favicon; if your site / app is likely to be added to a user's mobile device home screen or similar, you should review the <a href="https://github.com/jonrandahl/H5BP-Multi-Layer-FavIcons/issues/5" target="_blank">extensive list of potential icon sizes to provide</a> in this Github thread.
+  This is just a placeholder SFE 16x16 favicon; if your site / app is likely to be added to a user's mobile device home screen or similar, you should review the <a href="https://github.com/jonrandahl/H5BP-Multi-Layer-FavIcons/issues/5" target="_blank">extensive list of potential icon sizes to provide</a> in this Github thread.
 </p>
 
 <p class="guidance">
 The favicon for each SFE property is drawn from the brand identity for the property. The existing favicons are listed below.
 </p>
 
-<img src="sos/assets/favicon.ico" alt="SFE favicon" title="SFE favicon" />
+<img src="../sos/assets/favicon.ico" alt="LOS favicon" title="LOS favicon" />
 
-<img src="sos/assets/favicon-sos.ico" alt="Scotland on Screen favicon" title="Scotland on Screen favicon" />
+<img src="../sos/assets/favicon-mie.ico" alt="MIE favicon" title="MIE favicon" />
+
+<img src="../sos/assets/favicon-sfe.ico" alt="SFE favicon" title="SFE favicon" />
+
+<img src="../sos/assets/favicon-sos.ico" alt="Scotland on Screen favicon" title="Scotland on Screen favicon" />
+
+<img src="../sos/assets/favicon-ss.ico" alt="Screening Shorts favicon" title="Screening Shorts favicon" />
+
+<br/><br/>
